@@ -6,6 +6,8 @@ v3.1p4
 5. add push() in GitUtil - 2019/09/14
 6. add commit author name and email - 2019/09/15
 7. add createLocalRepository method in GitUtil - 2019/09/20
+8. add some methods in GitUtil - 2019/09/22
+
 
 v3.1p2 - 2019/05/28
 --
